2010-04-25  El Dragon  <thedragon@the-dragons-nest.co.uk>

	* OggPlayer.cs: Removed redundant enumeration - to - string
	  conversion function (functionality implemented by
	  OggUtilities.GetEnumString)
	Added some debug messages when compiled in debug mode to help
	  tracking down an elusive ALError.InvalidValue message

2010-04-24  El Dragon  <thedragon@the-dragons-nest.co.uk>

	* DragonOgg.csproj: Sorted version info

2010-04-24  El Dragon  <thedragon@the-dragons-nest.co.uk>

	* DragonOgg.csproj: Added license text to the mono project to
	  simplify distribution

2010-04-24  El Dragon  <thedragon@the-dragons-nest.co.uk>

	* OggPlayer.cs: Added intellisense documentation for
	  properties

	* MiscStuff.cs: Added a GetEnumString for the ALError
	  enumeration

2010-04-24  El Dragon  <thedragon@the-dragons-nest.co.uk>

	* OggPlayer.cs: Added FractionElapsed property to simplify
	  creation of progress bars in developed applications

2010-04-24  El Dragon  <thedragon@the-dragons-nest.co.uk>

	* OggPlayer.cs: Bugfix: Changed handling of EOF to prevent
	  cutting off when buffer size and/or count is very large

2010-04-24  El Dragon  <thedragon@the-dragons-nest.co.uk>

	* OggFile.cs: Added RemoveTag & RemoveAllTags functions

2010-04-24  El Dragon  <thedragon@the-dragons-nest.co.uk>

	* OggPlayer.cs: Fixed BufferSize & BufferCount property
	  declarations to return the correct values
	Changed default number of buffers to 32, up from 16 (Default
	  buffer size still 4096)

2010-04-24  El Dragon  <thedragon@the-dragons-nest.co.uk>

	* OggPlayer.cs: Added support for changing buffer size &
	  number at runtime
	Fixed 'Null Reference' bug caused by trying to raise events
	  when the user wasn't catching them

2010-04-23  El Dragon  <thedragon@the-dragons-nest.co.uk>

	* OggFile.cs: Complete re-write of Tag handling. Added new tag
	  functions

	* OggPlayer.cs:
	* MiscStuff.cs: Changes to reflect alterations in tag handling
